<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#51009371"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnCat1_100"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:insetBottom="0dp"
        android:insetTop="0dp"
        android:onClick="onClickBtnCat"
        android:text="@string/btn100"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline7"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline6"
        app:strokeColor="#000000"
        app:strokeWidth="2dp" />

    <Button
        android:id="@+id/btnCat2_100"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:insetBottom="0dp"
        android:insetTop="0dp"
        android:onClick="onClickBtnCat"
        android:text="@string/btn100"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline7"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/guideline6"
        app:strokeColor="#000000"
        app:strokeWidth="2dp" />

    <Button
        android:id="@+id/btnCat3_100"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:insetBottom="0dp"
        android:insetTop="0dp"
        android:onClick="onClickBtnCat"
        android:text="@string/btn100"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline7"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/guideline6"
        app:strokeColor="#000000"
        app:strokeWidth="2dp" />

    <Button
        android:id="@+id/btnCat4_100"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:insetBottom="0dp"
        android:insetTop="0dp"
        android:onClick="onClickBtnCat"
        android:text="@string/btn100"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toTopOf="@+id/guideline6"
        app:strokeColor="#000000"
        app:strokeWidth="2dp" />

    <Button
        android:id="@+id/btnCat1_200"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:insetBottom="0dp"
        android:insetTop="0dp"
        android:onClick="onClickBtnCat"
        android:text="@string/btn200"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline8"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline7"
        app:strokeColor="#000000"
        app:strokeWidth="2dp" />

    <Button
        android:id="@+id/btnCat2_200"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:insetBottom="0dp"
        android:insetTop="0dp"
        android:onClick="onClickBtnCat"
        android:text="@string/btn200"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline8"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/guideline7"
        app:strokeColor="#000000"
        app:strokeWidth="2dp" />

    <Button
        android:id="@+id/btnCat3_200"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:insetBottom="0dp"
        android:insetTop="0dp"
        android:onClick="onClickBtnCat"
        android:text="@string/btn200"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline8"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/guideline7"
        app:strokeColor="#000000"
        app:strokeWidth="2dp" />

    <Button
        android:id="@+id/btnCat4_200"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:insetBottom="0dp"
        android:insetTop="0dp"
        android:onClick="onClickBtnCat"
        android:text="@string/btn200"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toTopOf="@+id/guideline7"
        app:strokeColor="#000000"
        app:strokeWidth="2dp" />

    <Button
        android:id="@+id/btnCat1_300"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:insetBottom="0dp"
        android:insetTop="0dp"
        android:onClick="onClickBtnCat"
        android:text="@string/btn300"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline9"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline8"
        app:strokeColor="#000000"
        app:strokeWidth="2dp" />

    <Button
        android:id="@+id/btnCat2_300"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:insetBottom="0dp"
        android:insetTop="0dp"
        android:onClick="onClickBtnCat"
        android:text="@string/btn300"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline9"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/guideline8"
        app:strokeColor="#000000"
        app:strokeWidth="2dp" />

    <Button
        android:id="@+id/btnCat3_300"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:insetBottom="0dp"
        android:insetTop="0dp"
        android:onClick="onClickBtnCat"
        android:text="@string/btn300"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline9"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/guideline8"
        app:strokeColor="#000000"
        app:strokeWidth="2dp" />

    <Button
        android:id="@+id/btnCat4_300"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:insetBottom="0dp"
        android:insetTop="0dp"
        android:onClick="onClickBtnCat"
        android:text="@string/btn300"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toTopOf="@+id/guideline8"
        app:strokeColor="#000000"
        app:strokeWidth="2dp" />

    <Button
        android:id="@+id/btnCat1_400"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:insetBottom="0dp"
        android:insetTop="0dp"
        android:onClick="onClickBtnCat"
        android:text="@string/btn400"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline10"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline9"
        app:strokeColor="#000000"
        app:strokeWidth="2dp" />

    <Button
        android:id="@+id/btnCat2_400"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:insetBottom="0dp"
        android:insetTop="0dp"
        android:onClick="onClickBtnCat"
        android:text="@string/btn400"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline10"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/guideline9"
        app:strokeColor="#000000"
        app:strokeWidth="2dp" />

    <Button
        android:id="@+id/btnCat3_400"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:insetBottom="0dp"
        android:insetTop="0dp"
        android:onClick="onClickBtnCat"
        android:text="@string/btn400"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline10"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/guideline9"
        app:strokeColor="#000000"
        app:strokeWidth="2dp" />

    <Button
        android:id="@+id/btnCat4_400"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:insetBottom="0dp"
        android:insetTop="0dp"
        android:onClick="onClickBtnCat"
        android:text="@string/btn400"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toTopOf="@+id/guideline9"
        app:strokeColor="#000000"
        app:strokeWidth="2dp" />

    <Button
        android:id="@+id/btnCat1_500"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:insetBottom="0dp"
        android:insetTop="0dp"
        android:onClick="onClickBtnCat"
        android:text="@string/btn500"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline11"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline10"
        app:strokeColor="#000000"
        app:strokeWidth="2dp" />

    <Button
        android:id="@+id/btnCat2_500"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:insetBottom="0dp"
        android:insetTop="0dp"
        android:onClick="onClickBtnCat"
        android:text="@string/btn500"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline11"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/guideline10"
        app:strokeColor="#000000"
        app:strokeWidth="2dp" />

    <Button
        android:id="@+id/btnCat3_500"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:insetBottom="0dp"
        android:insetTop="0dp"
        android:onClick="onClickBtnCat"
        android:text="@string/btn500"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline11"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/guideline10"
        app:strokeColor="#000000"
        app:strokeWidth="2dp" />

    <Button
        android:id="@+id/btnCat4_500"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:insetBottom="0dp"
        android:insetTop="0dp"
        android:onClick="onClickBtnCat"
        android:text="@string/btn500"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toTopOf="@+id/guideline10"
        app:strokeColor="#000000"
        app:strokeWidth="2dp" />

    <Button
        android:id="@+id/btnCat1_600"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:insetBottom="0dp"
        android:insetTop="0dp"
        android:onClick="onClickBtnCat"
        android:text="@string/btn600"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline12"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline11"
        app:strokeColor="#000000"
        app:strokeWidth="2dp" />

    <Button
        android:id="@+id/btnCat2_600"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:insetBottom="0dp"
        android:insetTop="0dp"
        android:onClick="onClickBtnCat"
        android:text="@string/btn600"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline12"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/guideline11"
        app:strokeColor="#000000"
        app:strokeWidth="2dp" />

    <Button
        android:id="@+id/btnCat3_600"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:insetBottom="0dp"
        android:insetTop="0dp"
        android:onClick="onClickBtnCat"
        android:text="@string/btn600"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline12"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/guideline11"
        app:strokeColor="#000000"
        app:strokeWidth="2dp" />

    <Button
        android:id="@+id/btnCat4_600"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:insetBottom="0dp"
        android:insetTop="0dp"
        android:onClick="onClickBtnCat"
        android:text="@string/btn600"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toTopOf="@+id/guideline11"
        app:strokeColor="#000000"
        app:strokeWidth="2dp" />

    <TextView
        android:id="@+id/txtCategoria1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Categoria 1"
        app:layout_constraintBottom_toTopOf="@+id/guideline6"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/txtCategoria2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Categoria 2"
        app:layout_constraintBottom_toTopOf="@+id/guideline6"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/txtCategoria3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Categoria 3"
        app:layout_constraintBottom_toTopOf="@+id/guideline6"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/txtCategoria4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Categoria 4"
        app:layout_constraintBottom_toTopOf="@+id/guideline6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/txtPuntaje"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtPuntaje"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline12" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".125" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".375" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".625" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".75" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".875" />

</androidx.constraintlayout.widget.ConstraintLayout>